# $Id: Makefile.am,v 1.18 2008/04/29 21:59:17 erg Exp $ $Revision: 1.18 $
## Process this file with automake to produce Makefile.in

SUBDIRS = cdt graph agraph gd pathplan agutil sfio vmalloc ast vpsc \
	circogen dotgen fdpgen neatogen twopigen sfdpgen common pack gvc \
	ingraphs expr cgraph xdot topfish glcomp

EXTRA_DIST = Makefile.old
