# $Id: Makefile.am,v 1.3 2008/01/12 04:40:39 ellson Exp $ $Revision: 1.3 $
## Process this file with automake to produce Makefile.in

demodir = $(datadir)/@PACKAGE@/demo

if WITH_TCL
demo_SCRIPTS = entities.tcl
demo_DATA = entities.tcl.README entities.tcl.html
endif

EXTRA_DIST = entities.tcl entities.tcl.README entities.tcl.html
