# $Id: Makefile.am,v 1.3 2008/01/12 04:40:39 ellson Exp $ $Revision: 1.3 $
## Process this file with automake to produce Makefile.in

demodir = $(pkgdatadir)/demo

if WITH_TCL
demo_SCRIPTS = doted.tcl gcat.tcl
demo_DATA = doted.tcl.README gcat.tcl.README
endif

EXTRA_DIST = doted.tcl gcat.tcl doted.tcl.README gcat.tcl.README
