# $Id: Makefile.am,v 1.3 2008/01/12 04:40:39 ellson Exp $ $Revision: 1.3 $
## Process this file with automake to produce Makefile.in

SUBDIRS = pathplan_data

demodir = $(pkgdatadir)/demo

if WITH_TCL
demo_SCRIPTS = pathplan.tcl
demo_DATA = pathplan.tcl.README
endif

EXTRA_DIST = pathplan.tcl pathplan.tcl.README
